Make sure hamburger menu displays well on ie11
Problem:

The car MDTs run IE11,
which doesn't display the hamburger menu correctly.

Solution:

Set an explicit height and width for the hamburger menu icon.

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -22,4 +22,10 @@
     margin: auto;
     width: $page-width;
   }
+
+  .header-icon {
+    height: $header-height / 2;
+    width: $header-height / 2;
+    margin-top: $header-height / 4;
+  }
 }
